fixed main-title but still spacing login and signup button

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,9 +1,32 @@
 /* Use this file for styling elements */
 
-h1 {
+.main-title {
   text-align: center;
-  font-family: 'Dancing Script', cursive;
+  display: block;
+  text-decoration: none;
+}
+
+.main-title h1 {
   position: relative;
+  color: inherit;
+  font-family: 'Dancing Script', cursive;
+  text-decoration: none;
+}
+
+.main-title h1:hover {
+  color: #555;
+  text-decoration: none;
+}
+
+.authentication {
+  display: flex;
+  gap: 15px;
+  margin-right: 50px;
+}
+
+.authentication a{
+  text-decoration: none;
+  color: black;
 }
 
 .form_container {
